# tegra-button

./: .clang-format  README.md  platformio.ini
.github/workflows/: ci.yml
docs/: PROTOCOL.md  TESTING.md  WIRING.md
include/: conf.h  pins.h  wire.h
src/: main.cpp
tools/: pyproject.toml
tools/tegra_button/: __main__.py
tools/tegra_rcm_console/: __main__.py  board.py  flash.py
tools/tests/: test_board.py  test_flash.py
udev/: 99-tegra-rcm-console.rules
