[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tegra-button"
version = "0.1.0"
description = "Control a Jetson Orin Nano Devkit over USB (flash, power, serial)"
requires-python = ">=3.11"
dependencies = ["pyserial>=3.5"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[project.scripts]
tegra-button = "tegra_button.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tegra_button*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
